/F/Pagination/Some basic styling

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -8,6 +8,8 @@ html {
     font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: $dark-clr;
     overflow-x: hidden;
+    scroll-behavior: smooth;
+
 }
 
 body {
