--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -69,3 +69,4 @@
 @import "cmps/AddGigCard.scss";
 @import "cmps/MyGigsTable.scss";
 @import "cmps/YesNoModal.scss";
+@import "cmps/Paginations.scss";
