Pagination arrow disabled style

--- a/src/assets/styles/cmps/Paginations.scss
+++ b/src/assets/styles/cmps/Paginations.scss
@@ -21,6 +21,12 @@
         margin: 0 10px;
         cursor: pointer;
 
+        &.disabled {
+            opacity: .3;
+            pointer-events: none;
+        }
+
+
         &:hover {
             color: $dark-clr-1;
             background-color: $light-clr1;
