Change call-to-action package-desc display

--- a/src/assets/styles/cmps/CallToAction.scss
+++ b/src/assets/styles/cmps/CallToAction.scss
@@ -61,6 +61,7 @@
          }
 
          .package-desc {
+             display: grid;
              font-size: 1rem;
              font-weight: 400;
              letter-spacing: em(0.35px);
