--- a/src/assets/styles/cmps/CategoryNav.scss
+++ b/src/assets/styles/cmps/CategoryNav.scss
@@ -69,6 +69,7 @@
                 &.hidden {
                     opacity: 0;
                     pointer-events: none;
+                    display: none;
                 }
             }
 
