--- a/src/assets/styles/cmps/ReviewPreview.scss
+++ b/src/assets/styles/cmps/ReviewPreview.scss
@@ -42,7 +42,7 @@
 
     .rate-info {
         align-items: center;
-        color: #62646a;
+        color: $dark-clr-1;
         display: flex;
         font-size: .875rem;
         line-height: 1.3;
@@ -52,6 +52,10 @@
             border-right: 1px solid $light-clr2;
             height: 1.2142857143em;
             margin: .1428571429em .5714285714em;
+        }
+        .stars .rate.padding {
+        color: $dark-clr;
+
         }
     }
 
