Make checkout layout narrower

--- a/src/assets/styles/views/Checkout.scss
+++ b/src/assets/styles/views/Checkout.scss
@@ -1,6 +1,7 @@
 .checkout {
     display: grid;
     margin-top: rem(50px);
+    padding-inline: rem(55px);
 
     .cta-container {
         grid-row: 1/1;
