Change UserDetails layout

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -40,6 +40,6 @@
 }
 
 .user-details-layout {
-    display: grid;
-    grid-template-columns: 1fr minmax(10px, 25px) 1fr;
+    // display: grid;
+    // grid-template-columns: 1fr minmax(10px, 25px) 1fr;
 }
