--- a/src/assets/styles/cmps/OrderList.scss
+++ b/src/assets/styles/cmps/OrderList.scss
@@ -1,5 +1,5 @@
 .order-list {
-    width: 50vw;
+    // width: 50vw;
     border-collapse: collapse;
     border: 1px solid $modal-filter-border-clr;
 
