--- a/src/assets/styles/views/UserDetails.scss
+++ b/src/assets/styles/views/UserDetails.scss
@@ -1,210 +1,219 @@
 .user-details-container {
-    display: flex;
+    // display: flex;
     background-color: $user-bgclr;
     gap: rem(100px);
     padding-block-end: rem(18px);
 
-    .user-details {
-        margin-inline-start: 12.063rem;
+    .details-container {
+        display: flex;
+        gap: rem(100px);
 
-        .user-card {
-            position: relative;
-            border: 1px solid $modal-filter-border-clr;
-            padding: 30px;
-            margin-block-start: 50px;
+        .user-details {
+            // margin-inline-start: 12.063rem;
 
-            font-size: 14px;
-            line-height: 130%;
-            color: $dark-clr-1;
-            background-color: $light-clr;
+            .user-card {
+                position: relative;
+                border: 1px solid $modal-filter-border-clr;
+                padding: 30px;
+                margin-block-start: 50px;
 
-            .user-profile-info {
+                font-size: 14px;
+                line-height: 130%;
+                color: $dark-clr-1;
+                background-color: $light-clr;
 
-                .user-profile-img {
-                    font-size: 3em;
-                    width: 150px;
-                    margin-block-end: 15px;
+                .user-profile-info {
 
-                    img {
-                        height: 150px;
-                        z-index: 1;
-                        width: 100%;
-                        border-radius: 50%;
-                    }
+                    .user-profile-img {
+                        font-size: 3em;
+                        width: 150px;
+                        margin-block-end: 15px;
 
-                }
-
-                .username-info {
-                    font-weight: 700;
-                    color: $dark-clr1;
-                    font-size: 20px;
-                    line-height: 28px;
-                }
-
-                .secondary-name {
-                    text-align: center !important;
-                    font-size: 16px;
-                    line-height: 24px;
-                    color: $co-clr;
-                    margin-block-end: 24px;
-                }
-
-                .location {
-                    display: flex;
-                    justify-content: space-between;
-                    padding-block-start: 20px;
-
-                    .location-icon {
-                        width: 13px;
-                        height: 13px;
-                        color: $dark-clr-1;
-                        margin-inline-end: 12px;
-                    }
-
-                }
-
-                .member-since {
-                    display: flex;
-                    justify-content: space-between;
-                    padding-block-start: 20px;
-
-                    .user-icon {
-                        width: 13px;
-                        height: 13px;
-                        color: $dark-clr-1;
-                        margin-inline-end: 12px;
-
-                    }
-
-                }
-
-
-            }
-
-            @media only screen and (min-width: 600px) {
-                width: 17rem;
-            }
-
-            @media only screen and (min-width: 1200px) {
-                width: 21rem;
-            }
-
-            @media only screen and (min-width: 1315px) {
-                width: 25rem;
-            }
-        }
-
-        .desc-card {
-            position: relative;
-            border: 1px solid $modal-filter-border-clr;
-            padding: 30px;
-            max-width: 400px;
-            margin-block-start: 25px;
-
-            font-size: 14px;
-            line-height: 130%;
-            color: $dark-clr-1;
-            background-color: $light-clr;
-
-
-            .user-profile-desc {
-                .user-stats {
-                    .user-data {
-                        padding-block-end: 20px;
-                        margin-block-end: 10px;
-
-
-                        .header {
-                            justify-content: space-between;
-                            padding-block-end: 14px;
-
-
-                            h3 {
-                                color: $darkest-clr;
-                                font-size: 16px;
-                                font-weight: 700;
-                                line-height: 150%;
-
-                            }
-
-                            button {
-                                display: inline-block;
-                                color: $btn-clr;
-                                font-size: 14px;
-                                font-weight: 400;
-                                background: none;
-
-                                &:hover {
-                                    text-decoration: underline;
-                                }
-                            }
-
+                        img {
+                            height: 150px;
+                            z-index: 1;
+                            width: 100%;
+                            border-radius: 50%;
                         }
 
-                        p {
-                            word-wrap: break-word;
-                            line-height: 20px;
+                    }
+
+                    .username-info {
+                        font-weight: 700;
+                        color: $dark-clr1;
+                        font-size: 20px;
+                        line-height: 28px;
+                    }
+
+                    .secondary-name {
+                        text-align: center !important;
+                        font-size: 16px;
+                        line-height: 24px;
+                        color: $co-clr;
+                        margin-block-end: 24px;
+                    }
+
+                    .location {
+                        display: flex;
+                        justify-content: space-between;
+                        padding-block-start: 20px;
+
+                        .location-icon {
+                            width: 13px;
+                            height: 13px;
                             color: $dark-clr-1;
+                            margin-inline-end: 12px;
                         }
+
                     }
 
-                    .user-lang {
+                    .member-since {
+                        display: flex;
+                        justify-content: space-between;
+                        padding-block-start: 20px;
 
-                        .header {
-                            justify-content: space-between;
-                            padding-block-end: 14px;
-                            margin-block-start: 20px;
+                        .user-icon {
+                            width: 13px;
+                            height: 13px;
+                            color: $dark-clr-1;
+                            margin-inline-end: 12px;
 
-                            h3 {
-                                color: $darkest-clr;
-                                font-size: 16px;
-                                font-weight: 700;
-                                line-height: 150%;
+                        }
+
+                    }
+
+
+                }
+
+                @media only screen and (min-width: 600px) {
+                    width: 17rem;
+                }
+
+                @media only screen and (min-width: 1200px) {
+                    width: 21rem;
+                }
+
+                @media only screen and (min-width: 1315px) {
+                    width: 25rem;
+                }
+            }
+
+            .desc-card {
+                position: relative;
+                border: 1px solid $modal-filter-border-clr;
+                padding: 30px;
+                max-width: 400px;
+                margin-block-start: 25px;
+
+                font-size: 14px;
+                line-height: 130%;
+                color: $dark-clr-1;
+                background-color: $light-clr;
+
+
+                .user-profile-desc {
+                    .user-stats {
+                        .user-data {
+                            padding-block-end: 20px;
+                            margin-block-end: 10px;
+
+
+                            .header {
+                                justify-content: space-between;
+                                padding-block-end: 14px;
+
+
+                                h3 {
+                                    color: $darkest-clr;
+                                    font-size: 16px;
+                                    font-weight: 700;
+                                    line-height: 150%;
+
+                                }
+
+                                button {
+                                    display: inline-block;
+                                    color: $btn-clr;
+                                    font-size: 14px;
+                                    font-weight: 400;
+                                    background: none;
+
+                                    &:hover {
+                                        text-decoration: underline;
+                                    }
+                                }
+
                             }
 
-                            button {
-                                display: inline-block;
-                                color: $btn-clr;
-                                font-size: 14px;
-                                font-weight: 400;
-                                background: none;
-
-                                &:hover {
-                                    text-decoration: underline;
-                                }
+                            p {
+                                word-wrap: break-word;
+                                line-height: 20px;
+                                color: $dark-clr-1;
                             }
                         }
 
-                        ul {
-                            padding-block: 10px;
+                        .user-lang {
 
-                            li {
+                            .header {
+                                justify-content: space-between;
+                                padding-block-end: 14px;
+                                margin-block-start: 20px;
 
-                                .title {
+                                h3 {
+                                    color: $darkest-clr;
+                                    font-size: 16px;
+                                    font-weight: 700;
+                                    line-height: 150%;
+                                }
+
+                                button {
+                                    display: inline-block;
+                                    color: $btn-clr;
                                     font-size: 14px;
-                                    line-height: 18px;
-                                    color: $list-title-clr;
-                                }
+                                    font-weight: 400;
+                                    background: none;
 
-                                .sub-title {
-                                    color: $list-subtitle-clr;
+                                    &:hover {
+                                        text-decoration: underline;
+                                    }
                                 }
+                            }
 
-                                &:not(:last-child) {
-                                    margin-block-end: 10px;
+                            ul {
+                                padding-block: 10px;
+
+                                li {
+
+                                    .title {
+                                        font-size: 14px;
+                                        line-height: 18px;
+                                        color: $list-title-clr;
+                                    }
+
+                                    .sub-title {
+                                        color: $list-subtitle-clr;
+                                    }
+
+                                    &:not(:last-child) {
+                                        margin-block-end: 10px;
+                                    }
+
                                 }
-
                             }
                         }
                     }
                 }
             }
-        }
 
+        }
     }
+
 
     .gigs-column {
         .manage-orders {
+            display: flex;
+            flex-direction: column;
+
             h1 {
                 margin-block-start: 50px;
                 margin-block-end: 20px;
@@ -318,6 +327,7 @@
         h1 {
             font-size: rem(23px);
         }
+
         .add-gig-btn {
             cursor: pointer;
             transition: transform 0.4s;
