--- a/src/assets/styles/cmps/OrderList.scss
+++ b/src/assets/styles/cmps/OrderList.scss
@@ -26,7 +26,7 @@
         }
 
         td {
-            padding: 15px;
+            padding: 0 15px;
 
             &.status {
                 display: flex;
