--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -93,31 +93,27 @@
 }
 
 .pending-label {
-    color: $light-clr;
     background-color: $pending-clr;
-    padding: 2px 5px;
-    border-radius: 8px;
 }
 
 .approved-label {
-    color: $light-clr;
     background-color: $accent-clr;
-    padding: 2px 5px;
-    border-radius: 8px;
 }
 
 .rejected-label {
-    color: $light-clr;
     background-color: $error-clr;
-    padding: 2px 5px;
-    border-radius: 8px;
 }
 
 .fulfilled-label {
-    color: $light-clr;
     background-color: $fulfilled-clr;
+}
+
+.label {
+    text-align: center;
+    color: $light-clr;
     padding: 2px 5px;
     border-radius: 8px;
+    width: 90px; 
 }
 
 // Media helpers
