Add BreadCrumbs to GigDetails

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -71,3 +71,4 @@
 @import "cmps/YesNoModal.scss";
 @import "cmps/Paginations.scss";
 @import "cmps/FilterPill.scss";
+@import "cmps/BreadCrumbs.scss";
