--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -8,6 +8,7 @@ $dark-clr-2: lighten(#62646a, 50%);
 $dark-clr-3: #95979d;
 $dark-clr-4: #74767e;
 $smooth-light-clr: #ccc;
+$light-clr5: #c5c6c9;
 $light-clr4: #efeff0;
 $light-clr3: #fafafa;
 $light-clr2: #e4e5e7;
