--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -52,6 +52,7 @@ $details-carousel-height: 444px;
 $details-carousel-width: 738px;
 
 // Breakpoints
+$xs-mobile-breakpoint: 300px;
 $mobile-breakpoint: 600px;
 $narrow-breakpoint: 800px;
 $normal-breakpoint: 1155px;
