--- a/src/assets/styles/views/Checkout.scss
+++ b/src/assets/styles/views/Checkout.scss
@@ -1,9 +1,87 @@
 .checkout {
+    
+    @include for-xs-small-layout{
+        font-size: 14px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-flow: row;
+        margin-top: rem(50px);
+        padding-inline: 0;
+        .cta-container {
+            position: static;
+            grid-column: 1;
+            grid-row: 2;
+            justify-self: start;
+            width: 100%;
+        }
+        .payment-container .payment-methods-wrapper .credit-card-details .card {
+            margin-top: 0.5em;
+            margin-block-end: 1.125em;
+            display: block;
+            h6{
+                margin-block: rem(20px) 0;
+            }
+        }
+        .payment-container .payment-methods-wrapper .credit-card-details .card > * > *{
+            width: auto;
+        }
+        .payment-container .payment-methods-wrapper .credit-card-details .card > *{
+            width: auto;
+        }
+        .payment-container .payment-methods-wrapper .credit-card-details .card-number .credit-card-input-wrapper input{
+            width: auto;
+            border: 0.0625em solid #e4e5e7
+        }
+    }
+
+    @media only screen and (min-width: 450px) {
+        font-size: 1rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-flow: row;
+        margin-top: rem(50px);
+        .cta-container {
+            position: static;
+            grid-column: 1;
+            grid-row: 2;
+            justify-self: start;
+            width: 100%;
+        }
+        .payment-container .payment-methods-wrapper .credit-card-details .card {
+            font-size: 11px;
+            margin-top: 0.5em;
+            margin-block-end: 1.125em;
+            display: flex;
+            h6{
+                margin-block: rem(20px) 0;
+            }
+        }
+        .payment-container .payment-methods-wrapper .credit-card-details .card > * > *{
+            width: 100%;
+        }
+        .payment-container .payment-methods-wrapper .credit-card-details .card > *{
+            width: 100%;
+        }
+        .payment-container .payment-methods-wrapper .credit-card-details .card-number .credit-card-input-wrapper input{
+            width: 100%;
+            border: none
+        }
+    }
+
+    @include for-normal-layout{
     display: grid;
     margin-top: rem(50px);
     padding-inline: rem(55px);
-
+    grid-template-columns: repeat(2,1fr); 
+    // gap: 50px; 
+    grid-auto-flow: column;
     .cta-container {
-        grid-row: 1/1;
+        grid-row: 1;
+        grid-column: 2;
+        // position: fixed;
+        width: em(412px);
+        justify-self: end;
     }
+    }
+   
 }
