--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -47,6 +47,7 @@ $shadow-clr: #b2b3b681;
 
 //Sizes
 $arrow-btn-size: 48px;
+$arrow-btn-small-size: 33px;
 $card-carousel-height: 345px;
 $details-carousel-height: 444px;
 $details-carousel-width: 738px;
